myanalyzer.output
Terminals unused in grammar

    KEYWORD_TRUE
    KEYWORD_FALSE
    KEYWORD_IF
    KEYWORD_ELSE
    KEYWORD_ENDIF
    KEYWORD_FOR
    KEYWORD_IN
    KEYWORD_ENDFOR
    KEYWORD_WHILE
    KEYWORD_ENDWHILE
    KEYWORD_BREAK
    KEYWORD_CONTINUE
    KEYWORD_NOT
    KEYWORD_AND
    KEYWORD_OR
    KEYWORD_DEF
    KEYWORD_ENDCOMP
    KEYWORD_OF
    ADDITION_OPERATOR
    SUBTRACTION_OPERATOR
    MULTIPLICATION_OPERATOR
    DIVISION_OPERATOR
    MODULO_OPERATOR
    POWER_OPERATOR
    SIGN_OPERATOR_PLUS
    SIGN_OPERATOR_MINUS
    HASHTAG_ASSIGN_OPERATOR
    ADD_ASSIGN_OPERATOR
    SUBTRACT_ASSIGN_OPERATOR
    MULTIPLY_ASSIGN_OPERATOR
    DIVIDE_ASSIGN_OPERATOR
    MODULO_ASSIGN_OPERATOR
    ARRAY_ASSIGN_OPERATOR
    ARROW_OPERATOR
    IS_EQUAL_OPERATOR
    IS_NOT_EQUAL_OPERATOR
    LESS_THAN_OPERATOR
    LESS_EQUAL_OPERATOR
    GREATER_THAN_OPERATOR
    GREATER_EQUAL_OPERATOR
    DELIMITER_DOT


Rules useless in parser due to conflicts

   41 func_definitions: ε

   42 complex_types_declarations: ε


State 0 conflicts: 3 shift/reduce, 1 reduce/reduce
State 7 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 13 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_template

    2 program_template: complex_types_declarations const_declarations var_declarations func_definitions main_function
    3                 | complex_types_declarations const_declarations var_declarations main_function
    4                 | complex_types_declarations const_declarations func_definitions main_function
    5                 | complex_types_declarations var_declarations func_definitions main_function
    6                 | const_declarations var_declarations func_definitions main_function
    7                 | complex_types_declarations const_declarations main_function
    8                 | complex_types_declarations var_declarations main_function
    9                 | complex_types_declarations func_definitions main_function
   10                 | const_declarations var_declarations main_function
   11                 | const_declarations func_definitions main_function
   12                 | var_declarations func_definitions main_function
   13                 | complex_types_declarations main_function
   14                 | const_declarations main_function
   15                 | var_declarations main_function
   16                 | func_definitions main_function
   17                 | main_function

   18 main_function: KEYWORD_MAIN DELIMITER_LEFT_PARENTHESIS DELIMITER_RIGHT_PARENTHESIS DELIMITER_COLON statements KEYWORD_ENDDEF DELIMITER_SEMICOLON

   19 data_type: basic_type
   20          | complex_type
   21          | array_type

   22 basic_type: KEYWORD_INTEGER
   23           | KEYWORD_SCALAR
   24           | KEYWORD_STR
   25           | KEYWORD_BOOL

   26 complex_type: KEYWORD_COMP IDENTIFIER

   27 array_type: DELIMITER_LEFT_BRACKET INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type
   28           | DELIMITER_LEFT_BRACKET DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type

   29 var_declarations: var_declarations variable_declaration DELIMITER_SEMICOLON
   30                 | variable_declaration DELIMITER_SEMICOLON

   31 variable_declaration: variable_list DELIMITER_COLON data_type
   32                     | IDENTIFIER DELIMITER_LEFT_BRACKET INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type

   33 variable_list: variable_list DELIMITER_COMMA IDENTIFIER
   34              | IDENTIFIER

   35 const_declarations: const_declarations constant_declaration DELIMITER_SEMICOLON
   36                   | constant_declaration DELIMITER_SEMICOLON

   37 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR INTEGER_CONSTANT DELIMITER_COLON KEYWORD_INTEGER
   38                     | KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR FLOATING_POINT_CONSTANT DELIMITER_COLON KEYWORD_SCALAR
   39                     | KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR STRING_CONSTANT DELIMITER_COLON KEYWORD_STR
   40                     | KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR BOOLEAN_CONSTANT DELIMITER_COLON KEYWORD_BOOL

   41 func_definitions: ε

   42 complex_types_declarations: ε

   43 statements: return_statement
   44           | empty_statement

   45 return_statement: KEYWORD_RETURN DELIMITER_SEMICOLON

   46 empty_statement: ε
   47                | DELIMITER_SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <str> (258) 26 32 33 34 37 38 39 40
    INTEGER_CONSTANT <str> (259) 27 32 37
    FLOATING_POINT_CONSTANT <str> (260) 38
    STRING_CONSTANT <str> (261) 39
    BOOLEAN_CONSTANT <str> (262) 40
    KEYWORD_INTEGER (263) 22 37
    KEYWORD_SCALAR (264) 23 38
    KEYWORD_STR (265) 24 39
    KEYWORD_BOOL (266) 25 40
    KEYWORD_TRUE (267)
    KEYWORD_FALSE (268)
    KEYWORD_CONST (269) 37 38 39 40
    KEYWORD_IF (270)
    KEYWORD_ELSE (271)
    KEYWORD_ENDIF (272)
    KEYWORD_FOR (273)
    KEYWORD_IN (274)
    KEYWORD_ENDFOR (275)
    KEYWORD_WHILE (276)
    KEYWORD_ENDWHILE (277)
    KEYWORD_BREAK (278)
    KEYWORD_CONTINUE (279)
    KEYWORD_NOT (280)
    KEYWORD_AND (281)
    KEYWORD_OR (282)
    KEYWORD_DEF (283)
    KEYWORD_ENDDEF (284) 18
    KEYWORD_MAIN (285) 18
    KEYWORD_RETURN (286) 45
    KEYWORD_COMP (287) 26
    KEYWORD_ENDCOMP (288)
    KEYWORD_OF (289)
    ADDITION_OPERATOR (290)
    SUBTRACTION_OPERATOR (291)
    MULTIPLICATION_OPERATOR (292)
    DIVISION_OPERATOR (293)
    MODULO_OPERATOR (294)
    POWER_OPERATOR (295)
    SIGN_OPERATOR_PLUS (296)
    SIGN_OPERATOR_MINUS (297)
    ASSIGN_OPERATOR (298) 37 38 39 40
    HASHTAG_ASSIGN_OPERATOR (299)
    ADD_ASSIGN_OPERATOR (300)
    SUBTRACT_ASSIGN_OPERATOR (301)
    MULTIPLY_ASSIGN_OPERATOR (302)
    DIVIDE_ASSIGN_OPERATOR (303)
    MODULO_ASSIGN_OPERATOR (304)
    ARRAY_ASSIGN_OPERATOR (305)
    ARROW_OPERATOR (306)
    IS_EQUAL_OPERATOR (307)
    IS_NOT_EQUAL_OPERATOR (308)
    LESS_THAN_OPERATOR (309)
    LESS_EQUAL_OPERATOR (310)
    GREATER_THAN_OPERATOR (311)
    GREATER_EQUAL_OPERATOR (312)
    DELIMITER_DOT (313)
    DELIMITER_COLON (314) 18 27 28 31 32 37 38 39 40
    DELIMITER_SEMICOLON (315) 18 29 30 35 36 45 47
    DELIMITER_RIGHT_BRACKET (316) 27 28 32
    DELIMITER_LEFT_BRACKET (317) 27 28 32
    DELIMITER_RIGHT_PARENTHESIS (318) 18
    DELIMITER_LEFT_PARENTHESIS (319) 18
    DELIMITER_COMMA (320) 33


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    program <str> (67)
        on left: 1
        on right: 0
    program_template <str> (68)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
        on right: 1
    main_function <str> (69)
        on left: 18
        on right: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
    data_type <str> (70)
        on left: 19 20 21
        on right: 27 28 31 32
    basic_type <str> (71)
        on left: 22 23 24 25
        on right: 19
    complex_type <str> (72)
        on left: 26
        on right: 20
    array_type <str> (73)
        on left: 27 28
        on right: 21
    var_declarations <str> (74)
        on left: 29 30
        on right: 2 3 5 6 8 10 12 15 29
    variable_declaration <str> (75)
        on left: 31 32
        on right: 29 30
    variable_list <str> (76)
        on left: 33 34
        on right: 31 33
    const_declarations <str> (77)
        on left: 35 36
        on right: 2 3 4 6 7 10 11 14 35
    constant_declaration <str> (78)
        on left: 37 38 39 40
        on right: 35 36
    func_definitions <str> (79)
        on left: 41
        on right: 2 4 5 6 9 11 12 16
    complex_types_declarations <str> (80)
        on left: 42
        on right: 2 3 4 5 7 8 9 13
    statements <str> (81)
        on left: 43 44
        on right: 18
    return_statement <str> (82)
        on left: 45
        on right: 43
    empty_statement <str> (83)
        on left: 46 47
        on right: 44


State 0

    0 $accept: • program $end

    IDENTIFIER     shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2
    KEYWORD_MAIN   shift, and go to state 3

    IDENTIFIER     [reduce using rule 42 (complex_types_declarations)]
    KEYWORD_CONST  [reduce using rule 42 (complex_types_declarations)]
    KEYWORD_MAIN   [reduce using rule 41 (func_definitions)]
    KEYWORD_MAIN   [reduce using rule 42 (complex_types_declarations)]

    program                     go to state 4
    program_template            go to state 5
    main_function               go to state 6
    var_declarations            go to state 7
    variable_declaration        go to state 8
    variable_list               go to state 9
    const_declarations          go to state 10
    constant_declaration        go to state 11
    func_definitions            go to state 12
    complex_types_declarations  go to state 13


State 1

   32 variable_declaration: IDENTIFIER • DELIMITER_LEFT_BRACKET INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type
   34 variable_list: IDENTIFIER •

    DELIMITER_LEFT_BRACKET  shift, and go to state 14

    $default  reduce using rule 34 (variable_list)


State 2

   37 constant_declaration: KEYWORD_CONST • IDENTIFIER ASSIGN_OPERATOR INTEGER_CONSTANT DELIMITER_COLON KEYWORD_INTEGER
   38                     | KEYWORD_CONST • IDENTIFIER ASSIGN_OPERATOR FLOATING_POINT_CONSTANT DELIMITER_COLON KEYWORD_SCALAR
   39                     | KEYWORD_CONST • IDENTIFIER ASSIGN_OPERATOR STRING_CONSTANT DELIMITER_COLON KEYWORD_STR
   40                     | KEYWORD_CONST • IDENTIFIER ASSIGN_OPERATOR BOOLEAN_CONSTANT DELIMITER_COLON KEYWORD_BOOL

    IDENTIFIER  shift, and go to state 15


State 3

   18 main_function: KEYWORD_MAIN • DELIMITER_LEFT_PARENTHESIS DELIMITER_RIGHT_PARENTHESIS DELIMITER_COLON statements KEYWORD_ENDDEF DELIMITER_SEMICOLON

    DELIMITER_LEFT_PARENTHESIS  shift, and go to state 16


State 4

    0 $accept: program • $end

    $end  shift, and go to state 17


State 5

    1 program: program_template •

    $default  reduce using rule 1 (program)


State 6

   17 program_template: main_function •

    $default  reduce using rule 17 (program_template)


State 7

   12 program_template: var_declarations • func_definitions main_function
   15                 | var_declarations • main_function
   29 var_declarations: var_declarations • variable_declaration DELIMITER_SEMICOLON

    IDENTIFIER    shift, and go to state 1
    KEYWORD_MAIN  shift, and go to state 3

    KEYWORD_MAIN  [reduce using rule 41 (func_definitions)]

    main_function         go to state 18
    variable_declaration  go to state 19
    variable_list         go to state 9
    func_definitions      go to state 20


State 8

   30 var_declarations: variable_declaration • DELIMITER_SEMICOLON

    DELIMITER_SEMICOLON  shift, and go to state 21


State 9

   31 variable_declaration: variable_list • DELIMITER_COLON data_type
   33 variable_list: variable_list • DELIMITER_COMMA IDENTIFIER

    DELIMITER_COLON  shift, and go to state 22
    DELIMITER_COMMA  shift, and go to state 23


State 10

    6 program_template: const_declarations • var_declarations func_definitions main_function
   10                 | const_declarations • var_declarations main_function
   11                 | const_declarations • func_definitions main_function
   14                 | const_declarations • main_function
   35 const_declarations: const_declarations • constant_declaration DELIMITER_SEMICOLON

    IDENTIFIER     shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2
    KEYWORD_MAIN   shift, and go to state 3

    KEYWORD_MAIN  [reduce using rule 41 (func_definitions)]

    main_function         go to state 24
    var_declarations      go to state 25
    variable_declaration  go to state 8
    variable_list         go to state 9
    constant_declaration  go to state 26
    func_definitions      go to state 27


State 11

   36 const_declarations: constant_declaration • DELIMITER_SEMICOLON

    DELIMITER_SEMICOLON  shift, and go to state 28


State 12

   16 program_template: func_definitions • main_function

    KEYWORD_MAIN  shift, and go to state 3

    main_function  go to state 29


State 13

    2 program_template: complex_types_declarations • const_declarations var_declarations func_definitions main_function
    3                 | complex_types_declarations • const_declarations var_declarations main_function
    4                 | complex_types_declarations • const_declarations func_definitions main_function
    5                 | complex_types_declarations • var_declarations func_definitions main_function
    7                 | complex_types_declarations • const_declarations main_function
    8                 | complex_types_declarations • var_declarations main_function
    9                 | complex_types_declarations • func_definitions main_function
   13                 | complex_types_declarations • main_function

    IDENTIFIER     shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2
    KEYWORD_MAIN   shift, and go to state 3

    KEYWORD_MAIN  [reduce using rule 41 (func_definitions)]

    main_function         go to state 30
    var_declarations      go to state 31
    variable_declaration  go to state 8
    variable_list         go to state 9
    const_declarations    go to state 32
    constant_declaration  go to state 11
    func_definitions      go to state 33


State 14

   32 variable_declaration: IDENTIFIER DELIMITER_LEFT_BRACKET • INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type

    INTEGER_CONSTANT  shift, and go to state 34


State 15

   37 constant_declaration: KEYWORD_CONST IDENTIFIER • ASSIGN_OPERATOR INTEGER_CONSTANT DELIMITER_COLON KEYWORD_INTEGER
   38                     | KEYWORD_CONST IDENTIFIER • ASSIGN_OPERATOR FLOATING_POINT_CONSTANT DELIMITER_COLON KEYWORD_SCALAR
   39                     | KEYWORD_CONST IDENTIFIER • ASSIGN_OPERATOR STRING_CONSTANT DELIMITER_COLON KEYWORD_STR
   40                     | KEYWORD_CONST IDENTIFIER • ASSIGN_OPERATOR BOOLEAN_CONSTANT DELIMITER_COLON KEYWORD_BOOL

    ASSIGN_OPERATOR  shift, and go to state 35


State 16

   18 main_function: KEYWORD_MAIN DELIMITER_LEFT_PARENTHESIS • DELIMITER_RIGHT_PARENTHESIS DELIMITER_COLON statements KEYWORD_ENDDEF DELIMITER_SEMICOLON

    DELIMITER_RIGHT_PARENTHESIS  shift, and go to state 36


State 17

    0 $accept: program $end •

    $default  accept


State 18

   15 program_template: var_declarations main_function •

    $default  reduce using rule 15 (program_template)


State 19

   29 var_declarations: var_declarations variable_declaration • DELIMITER_SEMICOLON

    DELIMITER_SEMICOLON  shift, and go to state 37


State 20

   12 program_template: var_declarations func_definitions • main_function

    KEYWORD_MAIN  shift, and go to state 3

    main_function  go to state 38


State 21

   30 var_declarations: variable_declaration DELIMITER_SEMICOLON •

    $default  reduce using rule 30 (var_declarations)


State 22

   31 variable_declaration: variable_list DELIMITER_COLON • data_type

    KEYWORD_INTEGER         shift, and go to state 39
    KEYWORD_SCALAR          shift, and go to state 40
    KEYWORD_STR             shift, and go to state 41
    KEYWORD_BOOL            shift, and go to state 42
    KEYWORD_COMP            shift, and go to state 43
    DELIMITER_LEFT_BRACKET  shift, and go to state 44

    data_type     go to state 45
    basic_type    go to state 46
    complex_type  go to state 47
    array_type    go to state 48


State 23

   33 variable_list: variable_list DELIMITER_COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 49


State 24

   14 program_template: const_declarations main_function •

    $default  reduce using rule 14 (program_template)


State 25

    6 program_template: const_declarations var_declarations • func_definitions main_function
   10                 | const_declarations var_declarations • main_function
   29 var_declarations: var_declarations • variable_declaration DELIMITER_SEMICOLON

    IDENTIFIER    shift, and go to state 1
    KEYWORD_MAIN  shift, and go to state 3

    KEYWORD_MAIN  [reduce using rule 41 (func_definitions)]

    main_function         go to state 50
    variable_declaration  go to state 19
    variable_list         go to state 9
    func_definitions      go to state 51


State 26

   35 const_declarations: const_declarations constant_declaration • DELIMITER_SEMICOLON

    DELIMITER_SEMICOLON  shift, and go to state 52


State 27

   11 program_template: const_declarations func_definitions • main_function

    KEYWORD_MAIN  shift, and go to state 3

    main_function  go to state 53


State 28

   36 const_declarations: constant_declaration DELIMITER_SEMICOLON •

    $default  reduce using rule 36 (const_declarations)


State 29

   16 program_template: func_definitions main_function •

    $default  reduce using rule 16 (program_template)


State 30

   13 program_template: complex_types_declarations main_function •

    $default  reduce using rule 13 (program_template)


State 31

    5 program_template: complex_types_declarations var_declarations • func_definitions main_function
    8                 | complex_types_declarations var_declarations • main_function
   29 var_declarations: var_declarations • variable_declaration DELIMITER_SEMICOLON

    IDENTIFIER    shift, and go to state 1
    KEYWORD_MAIN  shift, and go to state 3

    KEYWORD_MAIN  [reduce using rule 41 (func_definitions)]

    main_function         go to state 54
    variable_declaration  go to state 19
    variable_list         go to state 9
    func_definitions      go to state 55


State 32

    2 program_template: complex_types_declarations const_declarations • var_declarations func_definitions main_function
    3                 | complex_types_declarations const_declarations • var_declarations main_function
    4                 | complex_types_declarations const_declarations • func_definitions main_function
    7                 | complex_types_declarations const_declarations • main_function
   35 const_declarations: const_declarations • constant_declaration DELIMITER_SEMICOLON

    IDENTIFIER     shift, and go to state 1
    KEYWORD_CONST  shift, and go to state 2
    KEYWORD_MAIN   shift, and go to state 3

    KEYWORD_MAIN  [reduce using rule 41 (func_definitions)]

    main_function         go to state 56
    var_declarations      go to state 57
    variable_declaration  go to state 8
    variable_list         go to state 9
    constant_declaration  go to state 26
    func_definitions      go to state 58


State 33

    9 program_template: complex_types_declarations func_definitions • main_function

    KEYWORD_MAIN  shift, and go to state 3

    main_function  go to state 59


State 34

   32 variable_declaration: IDENTIFIER DELIMITER_LEFT_BRACKET INTEGER_CONSTANT • DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type

    DELIMITER_RIGHT_BRACKET  shift, and go to state 60


State 35

   37 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR • INTEGER_CONSTANT DELIMITER_COLON KEYWORD_INTEGER
   38                     | KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR • FLOATING_POINT_CONSTANT DELIMITER_COLON KEYWORD_SCALAR
   39                     | KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR • STRING_CONSTANT DELIMITER_COLON KEYWORD_STR
   40                     | KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR • BOOLEAN_CONSTANT DELIMITER_COLON KEYWORD_BOOL

    INTEGER_CONSTANT         shift, and go to state 61
    FLOATING_POINT_CONSTANT  shift, and go to state 62
    STRING_CONSTANT          shift, and go to state 63
    BOOLEAN_CONSTANT         shift, and go to state 64


State 36

   18 main_function: KEYWORD_MAIN DELIMITER_LEFT_PARENTHESIS DELIMITER_RIGHT_PARENTHESIS • DELIMITER_COLON statements KEYWORD_ENDDEF DELIMITER_SEMICOLON

    DELIMITER_COLON  shift, and go to state 65


State 37

   29 var_declarations: var_declarations variable_declaration DELIMITER_SEMICOLON •

    $default  reduce using rule 29 (var_declarations)


State 38

   12 program_template: var_declarations func_definitions main_function •

    $default  reduce using rule 12 (program_template)


State 39

   22 basic_type: KEYWORD_INTEGER •

    $default  reduce using rule 22 (basic_type)


State 40

   23 basic_type: KEYWORD_SCALAR •

    $default  reduce using rule 23 (basic_type)


State 41

   24 basic_type: KEYWORD_STR •

    $default  reduce using rule 24 (basic_type)


State 42

   25 basic_type: KEYWORD_BOOL •

    $default  reduce using rule 25 (basic_type)


State 43

   26 complex_type: KEYWORD_COMP • IDENTIFIER

    IDENTIFIER  shift, and go to state 66


State 44

   27 array_type: DELIMITER_LEFT_BRACKET • INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type
   28           | DELIMITER_LEFT_BRACKET • DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type

    INTEGER_CONSTANT         shift, and go to state 67
    DELIMITER_RIGHT_BRACKET  shift, and go to state 68


State 45

   31 variable_declaration: variable_list DELIMITER_COLON data_type •

    $default  reduce using rule 31 (variable_declaration)


State 46

   19 data_type: basic_type •

    $default  reduce using rule 19 (data_type)


State 47

   20 data_type: complex_type •

    $default  reduce using rule 20 (data_type)


State 48

   21 data_type: array_type •

    $default  reduce using rule 21 (data_type)


State 49

   33 variable_list: variable_list DELIMITER_COMMA IDENTIFIER •

    $default  reduce using rule 33 (variable_list)


State 50

   10 program_template: const_declarations var_declarations main_function •

    $default  reduce using rule 10 (program_template)


State 51

    6 program_template: const_declarations var_declarations func_definitions • main_function

    KEYWORD_MAIN  shift, and go to state 3

    main_function  go to state 69


State 52

   35 const_declarations: const_declarations constant_declaration DELIMITER_SEMICOLON •

    $default  reduce using rule 35 (const_declarations)


State 53

   11 program_template: const_declarations func_definitions main_function •

    $default  reduce using rule 11 (program_template)


State 54

    8 program_template: complex_types_declarations var_declarations main_function •

    $default  reduce using rule 8 (program_template)


State 55

    5 program_template: complex_types_declarations var_declarations func_definitions • main_function

    KEYWORD_MAIN  shift, and go to state 3

    main_function  go to state 70


State 56

    7 program_template: complex_types_declarations const_declarations main_function •

    $default  reduce using rule 7 (program_template)


State 57

    2 program_template: complex_types_declarations const_declarations var_declarations • func_definitions main_function
    3                 | complex_types_declarations const_declarations var_declarations • main_function
   29 var_declarations: var_declarations • variable_declaration DELIMITER_SEMICOLON

    IDENTIFIER    shift, and go to state 1
    KEYWORD_MAIN  shift, and go to state 3

    KEYWORD_MAIN  [reduce using rule 41 (func_definitions)]

    main_function         go to state 71
    variable_declaration  go to state 19
    variable_list         go to state 9
    func_definitions      go to state 72


State 58

    4 program_template: complex_types_declarations const_declarations func_definitions • main_function

    KEYWORD_MAIN  shift, and go to state 3

    main_function  go to state 73


State 59

    9 program_template: complex_types_declarations func_definitions main_function •

    $default  reduce using rule 9 (program_template)


State 60

   32 variable_declaration: IDENTIFIER DELIMITER_LEFT_BRACKET INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET • DELIMITER_COLON data_type

    DELIMITER_COLON  shift, and go to state 74


State 61

   37 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR INTEGER_CONSTANT • DELIMITER_COLON KEYWORD_INTEGER

    DELIMITER_COLON  shift, and go to state 75


State 62

   38 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR FLOATING_POINT_CONSTANT • DELIMITER_COLON KEYWORD_SCALAR

    DELIMITER_COLON  shift, and go to state 76


State 63

   39 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR STRING_CONSTANT • DELIMITER_COLON KEYWORD_STR

    DELIMITER_COLON  shift, and go to state 77


State 64

   40 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR BOOLEAN_CONSTANT • DELIMITER_COLON KEYWORD_BOOL

    DELIMITER_COLON  shift, and go to state 78


State 65

   18 main_function: KEYWORD_MAIN DELIMITER_LEFT_PARENTHESIS DELIMITER_RIGHT_PARENTHESIS DELIMITER_COLON • statements KEYWORD_ENDDEF DELIMITER_SEMICOLON

    KEYWORD_RETURN       shift, and go to state 79
    DELIMITER_SEMICOLON  shift, and go to state 80

    $default  reduce using rule 46 (empty_statement)

    statements        go to state 81
    return_statement  go to state 82
    empty_statement   go to state 83


State 66

   26 complex_type: KEYWORD_COMP IDENTIFIER •

    $default  reduce using rule 26 (complex_type)


State 67

   27 array_type: DELIMITER_LEFT_BRACKET INTEGER_CONSTANT • DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type

    DELIMITER_RIGHT_BRACKET  shift, and go to state 84


State 68

   28 array_type: DELIMITER_LEFT_BRACKET DELIMITER_RIGHT_BRACKET • DELIMITER_COLON data_type

    DELIMITER_COLON  shift, and go to state 85


State 69

    6 program_template: const_declarations var_declarations func_definitions main_function •

    $default  reduce using rule 6 (program_template)


State 70

    5 program_template: complex_types_declarations var_declarations func_definitions main_function •

    $default  reduce using rule 5 (program_template)


State 71

    3 program_template: complex_types_declarations const_declarations var_declarations main_function •

    $default  reduce using rule 3 (program_template)


State 72

    2 program_template: complex_types_declarations const_declarations var_declarations func_definitions • main_function

    KEYWORD_MAIN  shift, and go to state 3

    main_function  go to state 86


State 73

    4 program_template: complex_types_declarations const_declarations func_definitions main_function •

    $default  reduce using rule 4 (program_template)


State 74

   32 variable_declaration: IDENTIFIER DELIMITER_LEFT_BRACKET INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET DELIMITER_COLON • data_type

    KEYWORD_INTEGER         shift, and go to state 39
    KEYWORD_SCALAR          shift, and go to state 40
    KEYWORD_STR             shift, and go to state 41
    KEYWORD_BOOL            shift, and go to state 42
    KEYWORD_COMP            shift, and go to state 43
    DELIMITER_LEFT_BRACKET  shift, and go to state 44

    data_type     go to state 87
    basic_type    go to state 46
    complex_type  go to state 47
    array_type    go to state 48


State 75

   37 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR INTEGER_CONSTANT DELIMITER_COLON • KEYWORD_INTEGER

    KEYWORD_INTEGER  shift, and go to state 88


State 76

   38 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR FLOATING_POINT_CONSTANT DELIMITER_COLON • KEYWORD_SCALAR

    KEYWORD_SCALAR  shift, and go to state 89


State 77

   39 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR STRING_CONSTANT DELIMITER_COLON • KEYWORD_STR

    KEYWORD_STR  shift, and go to state 90


State 78

   40 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR BOOLEAN_CONSTANT DELIMITER_COLON • KEYWORD_BOOL

    KEYWORD_BOOL  shift, and go to state 91


State 79

   45 return_statement: KEYWORD_RETURN • DELIMITER_SEMICOLON

    DELIMITER_SEMICOLON  shift, and go to state 92


State 80

   47 empty_statement: DELIMITER_SEMICOLON •

    $default  reduce using rule 47 (empty_statement)


State 81

   18 main_function: KEYWORD_MAIN DELIMITER_LEFT_PARENTHESIS DELIMITER_RIGHT_PARENTHESIS DELIMITER_COLON statements • KEYWORD_ENDDEF DELIMITER_SEMICOLON

    KEYWORD_ENDDEF  shift, and go to state 93


State 82

   43 statements: return_statement •

    $default  reduce using rule 43 (statements)


State 83

   44 statements: empty_statement •

    $default  reduce using rule 44 (statements)


State 84

   27 array_type: DELIMITER_LEFT_BRACKET INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET • DELIMITER_COLON data_type

    DELIMITER_COLON  shift, and go to state 94


State 85

   28 array_type: DELIMITER_LEFT_BRACKET DELIMITER_RIGHT_BRACKET DELIMITER_COLON • data_type

    KEYWORD_INTEGER         shift, and go to state 39
    KEYWORD_SCALAR          shift, and go to state 40
    KEYWORD_STR             shift, and go to state 41
    KEYWORD_BOOL            shift, and go to state 42
    KEYWORD_COMP            shift, and go to state 43
    DELIMITER_LEFT_BRACKET  shift, and go to state 44

    data_type     go to state 95
    basic_type    go to state 46
    complex_type  go to state 47
    array_type    go to state 48


State 86

    2 program_template: complex_types_declarations const_declarations var_declarations func_definitions main_function •

    $default  reduce using rule 2 (program_template)


State 87

   32 variable_declaration: IDENTIFIER DELIMITER_LEFT_BRACKET INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type •

    $default  reduce using rule 32 (variable_declaration)


State 88

   37 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR INTEGER_CONSTANT DELIMITER_COLON KEYWORD_INTEGER •

    $default  reduce using rule 37 (constant_declaration)


State 89

   38 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR FLOATING_POINT_CONSTANT DELIMITER_COLON KEYWORD_SCALAR •

    $default  reduce using rule 38 (constant_declaration)


State 90

   39 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR STRING_CONSTANT DELIMITER_COLON KEYWORD_STR •

    $default  reduce using rule 39 (constant_declaration)


State 91

   40 constant_declaration: KEYWORD_CONST IDENTIFIER ASSIGN_OPERATOR BOOLEAN_CONSTANT DELIMITER_COLON KEYWORD_BOOL •

    $default  reduce using rule 40 (constant_declaration)


State 92

   45 return_statement: KEYWORD_RETURN DELIMITER_SEMICOLON •

    $default  reduce using rule 45 (return_statement)


State 93

   18 main_function: KEYWORD_MAIN DELIMITER_LEFT_PARENTHESIS DELIMITER_RIGHT_PARENTHESIS DELIMITER_COLON statements KEYWORD_ENDDEF • DELIMITER_SEMICOLON

    DELIMITER_SEMICOLON  shift, and go to state 96


State 94

   27 array_type: DELIMITER_LEFT_BRACKET INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET DELIMITER_COLON • data_type

    KEYWORD_INTEGER         shift, and go to state 39
    KEYWORD_SCALAR          shift, and go to state 40
    KEYWORD_STR             shift, and go to state 41
    KEYWORD_BOOL            shift, and go to state 42
    KEYWORD_COMP            shift, and go to state 43
    DELIMITER_LEFT_BRACKET  shift, and go to state 44

    data_type     go to state 97
    basic_type    go to state 46
    complex_type  go to state 47
    array_type    go to state 48


State 95

   28 array_type: DELIMITER_LEFT_BRACKET DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type •

    $default  reduce using rule 28 (array_type)


State 96

   18 main_function: KEYWORD_MAIN DELIMITER_LEFT_PARENTHESIS DELIMITER_RIGHT_PARENTHESIS DELIMITER_COLON statements KEYWORD_ENDDEF DELIMITER_SEMICOLON •

    $default  reduce using rule 18 (main_function)


State 97

   27 array_type: DELIMITER_LEFT_BRACKET INTEGER_CONSTANT DELIMITER_RIGHT_BRACKET DELIMITER_COLON data_type •

    $default  reduce using rule 27 (array_type)
